@@ -1,4 +1,4 @@
-// generated 2002/12/12 12:22:47 CET by thoma@Tiger.(none)
+// generated 2002/12/12 14:57:26 CET by thoma@Tiger.(none)
 // using glademm V1.1.2a_cvs
 //
 // DO NOT EDIT THIS FILE ! It was created using
@@ -20,8 +20,6 @@ gtk_acpi_glade::gtk_acpi_glade(
    Gtk::Window *gtk_acpi = this;
    label_decoration = manage(new class Gtk::Label("TEXT"));
    frame_draw = manage(new class Gtk::Frame());
-   label_temp = manage(new class Gtk::Label("label4"));
-   label_load = manage(new class Gtk::Label("label9"));
    label_cooling = manage(new class Gtk::Label("label7"));
    label_ac = manage(new class Gtk::Label("label2"));
    label_fan_ = manage(new class Gtk::Label("Fan:"));
@@ -30,8 +28,11 @@ gtk_acpi_glade::gtk_acpi_glade(
    label_load_ = manage(new class Gtk::Label("Load:"));
    label_bat1 = manage(new class Gtk::Label("label6"));
    label_bat1_ = manage(new class Gtk::Label("Bat.1:"));
+   label_load = manage(new class Gtk::Label("label9"));
    
    Gtk::Label *label1 = manage(new class Gtk::Label(""));
+   label_temp = manage(new class Gtk::Label("label4"));
+   
    Gtk::Table *table2 = manage(new class Gtk::Table(5, 5, false));
    frame_label = manage(new class Gtk::Frame());
    
@@ -44,14 +45,6 @@ gtk_acpi_glade::gtk_acpi_glade(
    label_decoration->set_line_wrap(false);
    frame_draw->set_shadow_type(GTK_SHADOW_NONE);
    frame_draw->set_label_align(0,0);
-   label_temp->set_alignment(7.45058e-09,0.5);
-   label_temp->set_padding(0,0);
-   label_temp->set_justify(GTK_JUSTIFY_CENTER);
-   label_temp->set_line_wrap(false);
-   label_load->set_alignment(0,0.5);
-   label_load->set_padding(0,0);
-   label_load->set_justify(GTK_JUSTIFY_CENTER);
-   label_load->set_line_wrap(false);
    label_cooling->set_alignment(0,0.5);
    label_cooling->set_padding(0,0);
    label_cooling->set_justify(GTK_JUSTIFY_CENTER);
@@ -84,15 +77,21 @@ gtk_acpi_glade::gtk_acpi_glade(
    label_bat1_->set_padding(0,0);
    label_bat1_->set_justify(GTK_JUSTIFY_CENTER);
    label_bat1_->set_line_wrap(false);
-   label1->set_usize(3,-1);
+   label_load->set_alignment(0,0.5);
+   label_load->set_padding(0,0);
+   label_load->set_justify(GTK_JUSTIFY_CENTER);
+   label_load->set_line_wrap(false);
+   label1->set_usize(4,-1);
    label1->set_alignment(0,0.5);
    label1->set_padding(0,0);
    label1->set_justify(GTK_JUSTIFY_CENTER);
    label1->set_line_wrap(false);
+   label_temp->set_alignment(7.45058e-09,0.5);
+   label_temp->set_padding(0,0);
+   label_temp->set_justify(GTK_JUSTIFY_CENTER);
+   label_temp->set_line_wrap(false);
    table2->set_row_spacings(0);
    table2->set_col_spacings(0);
-   table2->attach(*label_temp, 1, 2, 0, 1, GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
-   table2->attach(*label_load, 1, 2, 1, 2, GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
    table2->attach(*label_cooling, 4, 5, 0, 1, GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
    table2->attach(*label_ac, 4, 5, 1, 2, GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
    table2->attach(*label_fan_, 3, 4, 0, 1, GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
@@ -101,7 +100,9 @@ gtk_acpi_glade::gtk_acpi_glade(
    table2->attach(*label_load_, 0, 1, 1, 2, GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
    table2->attach(*label_bat1, 1, 4, 3, 4, GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
    table2->attach(*label_bat1_, 0, 1, 3, 4, GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
-   table2->attach(*label1, 2, 3, 0, 2, GTK_FILL, GTK_EXPAND, 0, 0);
+   table2->attach(*label_load, 1, 2, 1, 2, GTK_FILL, GTK_SHRINK, 0, 0);
+   table2->attach(*label1, 2, 3, 0, 2, GTK_EXPAND|GTK_FILL, 0, 0, 0);
+   table2->attach(*label_temp, 1, 2, 0, 1, GTK_EXPAND|GTK_FILL, GTK_SHRINK, 0, 0);
    frame_label->set_shadow_type(GTK_SHADOW_NONE);
    frame_label->set_label_align(0,0);
    frame_label->add(*table2);
@@ -109,7 +110,7 @@ gtk_acpi_glade::gtk_acpi_glade(
    table3->set_col_spacings(0);
    table3->attach(*label_decoration, 0, 2, 0, 1, GTK_EXPAND|GTK_SHRINK|GTK_FILL, GTK_SHRINK, 0, 0);
    table3->attach(*frame_draw, 1, 2, 1, 2, GTK_FILL, GTK_EXPAND|GTK_FILL, 0, 0);
-   table3->attach(*frame_label, 0, 1, 1, 2, GTK_FILL, GTK_FILL, 0, 0);
+   table3->attach(*frame_label, 0, 1, 1, 2, GTK_EXPAND|GTK_FILL, GTK_EXPAND|GTK_FILL, 0, 0);
    eventbox->set_events(GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK | GDK_LEAVE_NOTIFY_MASK);
    eventbox->set_flags(GTK_CAN_FOCUS);
    eventbox->grab_focus();
@@ -125,8 +126,6 @@ gtk_acpi_glade::gtk_acpi_glade(
    gtk_acpi->add(*table1);
    label_decoration->show();
    frame_draw->show();
-   label_temp->show();
-   label_load->show();
    label_cooling->show();
    label_ac->show();
    label_fan_->show();
@@ -135,7 +134,9 @@ gtk_acpi_glade::gtk_acpi_glade(
    label_load_->show();
    label_bat1->show();
    label_bat1_->show();
+   label_load->show();
    label1->show();
+   label_temp->show();
    table2->show();
    frame_label->show();
    table3->show();
