@@ -1,4 +1,4 @@
-// generated 2002/12/11 10:33:16 CET by thoma@Tiger.(none)
+// generated 2002/12/12 14:56:16 CET by thoma@Tiger.(none)
 // using glademm V1.1.2a_cvs
 //
 // DO NOT EDIT THIS FILE ! It was created using
@@ -20,8 +20,6 @@ protected:
         
         class Gtk::Label *label_decoration;
         class Gtk::Frame *frame_draw;
-        class Gtk::Label *label_temp;
-        class Gtk::Label *label_load;
         class Gtk::Label *label_cooling;
         class Gtk::Label *label_ac;
         class Gtk::Label *label_fan_;
@@ -30,6 +28,8 @@ protected:
         class Gtk::Label *label_load_;
         class Gtk::Label *label_bat1;
         class Gtk::Label *label_bat1_;
+        class Gtk::Label *label_load;
+        class Gtk::Label *label_temp;
         class Gtk::Frame *frame_label;
         
         gtk_acpi_glade();
