@@ -118,3 +118,6 @@
 
 2002/12/12 11:36:51 CET
 	update files from .glade file
+
+2002/12/12 12:22:47 CET
+	update files from .glade file
